--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -12024,4 +12024,11 @@ body {
   margin-right: 1rem;
 }
 
+.row-config {
+  height: calc(100vh - 60px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /*# sourceMappingURL=main.css.map */
