--- a/src/views/config.html
+++ b/src/views/config.html
@@ -17,7 +17,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row row-config">
       <div class="col-12">
         <h3>MockingBird Proxy require a dir for save a json file</h3>
         <button class="btn btn-dark" type="button" onclick="selectDirectory()">Click and choice your working directory</button>
