--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,27 +3,33 @@
 
 $primary: #262d34;
 $secondary: #245563;
-body{
+
+body {
   background-color: $primary;
   color: white;
 }
-.top-bar{
-  .header{
+
+.top-bar {
+  .header {
     display: flex;
-    img{
+
+    img {
       width: 60px;
     }
   }
 }
-.controller-container{
-  .play{
+
+.controller-container {
+  .play {
     font-size: 20px;
     cursor: pointer;
   }
-  .stop{
+
+  .stop {
     font-size: 20px;
     cursor: pointer;
   }
+
   .port {
     cursor: text;
     width: 60px;
@@ -33,12 +39,14 @@ body{
     height: 20px;
     background-color: $primary;
     color: white;
-    &:disabled{
+
+    &:disabled {
       color: #6c757d;
       border-bottom: 1px solid #6c757d;
       cursor: not-allowed;
     }
   }
+
   .path {
     cursor: pointer;
     width: 400px;
@@ -48,17 +56,20 @@ body{
     height: 20px;
     background-color: $primary;
     color: white;
-    &:disabled{
+
+    &:disabled {
       color: #6c757d;
       border-bottom: 1px solid #6c757d;
       cursor: not-allowed;
     }
   }
-  #config{
+
+  #config {
     margin: 0;
     margin-right: 1rem;
   }
-  .led{
+
+  .led {
     width: 15px;
     height: 15px;
     border-radius: 50%;
@@ -66,15 +77,17 @@ body{
     border: 1px solid #14681f;
     cursor: pointer;
     margin-right: 1rem;
-    &-on{
+
+    &-on {
       background-color: #29ea42;
       box-shadow: 0 0 12px #29ea42;
       border: 1px solid #29ea42;
     }
   }
 }
-.row-mock{
-  & > div{
+
+.row-mock {
+  &>div {
     display: grid;
     grid-template-columns: 50px 100fr auto;
     grid-template-rows: 1fr 1fr;
@@ -85,13 +98,16 @@ body{
     background-color: #2b3947;
     color: white;
     border-radius: 10px;
-    p{
-      margin:0;
+
+    p {
+      margin: 0;
     }
-    p.filename{
+
+    p.filename {
       grid-column: 1 / 3;
       grid-row: 2 / 3;
     }
+
     p.method {
       border-radius: 5px;
       background-color: #ea2929;
@@ -103,7 +119,8 @@ body{
       justify-content: center;
       align-items: center;
     }
-    .actions{
+
+    .actions {
       grid-row: 1 / 4;
       display: flex;
       justify-content: center;
@@ -112,25 +129,30 @@ body{
   }
 }
 
-.container-edit{
-  .jsoneditor{
+.container-edit {
+  .jsoneditor {
     border: 1px solid $primary;
     margin-bottom: 3rem;
-    .jsoneditor-navigation-bar{
+
+    .jsoneditor-navigation-bar {
       color: white;
       background-color: $primary;
     }
-    .jsoneditor-menu{
+
+    .jsoneditor-menu {
       background-color: $primary;
       border-bottom: 1px solid $primary;
-      button{
+
+      button {
         opacity: 1;
         color: white;
       }
-      .jsoneditor-search{
-        .jsoneditor-frame{
+
+      .jsoneditor-search {
+        .jsoneditor-frame {
           background-color: $primary;
-          input{
+
+          input {
             background-color: $primary;
             color: white;
             border-bottom: 1px solid white;
@@ -138,21 +160,25 @@ body{
         }
       }
     }
-    .jsoneditor-tree-inner{
-      tbody{
+
+    .jsoneditor-tree-inner {
+      tbody {
         background-color: $primary;
       }
     }
-    .jsoneditor-tree{
-      .jsoneditor-readonly{
+
+    .jsoneditor-tree {
+      .jsoneditor-readonly {
         color: #bfb9b9;
       }
-      button{
-        &.jsoneditor-expanded{
+
+      button {
+        &.jsoneditor-expanded {
           filter: brightness(100);
         }
       }
     }
+
     div.jsoneditor-field,
     div.jsoneditor-value,
     div.jsoneditor td,
@@ -160,9 +186,10 @@ body{
     div.jsoneditor textarea,
     pre.jsoneditor-preview,
     .jsoneditor-schema-error,
-    .jsoneditor-popover{
+    .jsoneditor-popover {
       color: white;
     }
+
     div.jsoneditor-field[contenteditable=true]:focus,
     div.jsoneditor-field[contenteditable=true]:hover,
     div.jsoneditor-value[contenteditable=true]:focus,
@@ -173,16 +200,25 @@ body{
       border: 1px solid #ffee00;
       border-radius: 2px;
     }
-    div.jsoneditor-tree button.jsoneditor-collapsed{
+
+    div.jsoneditor-tree button.jsoneditor-collapsed {
       filter: brightness(100);
-    
+
     }
   }
-  .controller-json{
-    .bi{
+
+  .controller-json {
+    .bi {
       cursor: pointer;
       font-size: 30px;
       margin-right: 1rem;
     }
   }
+}
+
+.row-config {
+  height: calc(100vh - 60px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
