fix port server

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,7 +19,7 @@
         <!-- <input id="path" class="path" type="text" value="/Users/davidesalvato/Downloads/mockbird"> -->
         <p id="config"></p>
         <span class="led"></span>
-        <input id="port" class="port" type="text" value="3000">
+        <input id="port" class="port" type="text" value="">
         <i id="stop" class="stop bi bi-stop-fill d-none" onclick="stopServer()"></i>
         <i id="play" class="play bi bi-play-fill" onclick="startServer()"></i>
       </div>
