--- a/src/views/edit.html
+++ b/src/views/edit.html
@@ -16,6 +16,7 @@
     <div class="row top-bar">
       <div class="col-6">
         <div class="header">
+          <img src="../assets/logo/mocking-bird-proxy-logo.jpg" class="img-fluid" alt="" srcset="">
           <h1>Mockingbird Proxy</h1>
         </div>
       </div>
