--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,6 +15,7 @@ body {
 
     img {
       width: 60px;
+      height: 60px;
     }
   }
 }
@@ -223,5 +224,26 @@ body {
     display: flex;
     justify-content: start;
     align-items: center;
+  }
+}
+
+.path-history{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .path{
+    width: fit-content;
+    height: fit-content;
+    cursor: pointer;
+    margin: .2rem 1rem;
+    border-radius: 5px;
+    &:hover{
+      background-color: #3b4e62;
+    }
+    p{
+      padding: .5rem;
+      margin: 0;
+    }
   }
 }
