--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -104,29 +104,54 @@ body {
       margin: 0;
     }
 
-    p.filename {
-      grid-column: 1 / 3;
+    .filename {
+      grid-column: 2 / 3;
       grid-row: 2 / 3;
+      margin-left: .5rem;
     }
-
-    p.method {
+    .target-url{
+      grid-column: 2 / 3;
+      grid-row: 1 / 2;
+      margin-left: .5rem;
+    }
+    .actions {
+      grid-column: 3 / 4;
+      grid-row: 1 / 3;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .form-check-input:checked {
+        background-color: #c30808;
+        border-color: #d43f3f;
+      }
+    }
+    .method {
+      grid-column: 1 / 2;
+      grid-row: 1 / 3;
       border-radius: 5px;
       background-color: #ea2929;
       color: white;
       padding: 2px;
       font-size: 10px;
-      width: fit-content;
+      width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
+      font-weight: 700;
+      &-get {
+        background-color: #0baa20;
+      }
+      &-post {
+        background-color: #df9401;
+      }
+      &-put {
+        background-color: #ea5b29;
+      }
+      &-patch {
+        background-color: #89460c;
+      }
     }
 
-    .actions {
-      grid-row: 1 / 4;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
   }
 }
 
