Add createMock function to mockManager.js and proxy.helper.js

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -43,6 +43,7 @@
           </div>
         </div>
         <div class="delete-section">
+          <button type="button" class="btn btn-success delete-all" onclick="openPageCreateMock()"><i class="bi bi-file-earmark-plus-fill"></i> Add</button>
           <button type="button" class="btn btn-danger delete-all" onclick="showConfirmDelete()"><i class="bi bi-trash-fill"></i> Delete all mock</button>
           <button type="button" class="btn btn-danger confirm-delete-all d-none" onclick="deleteAllMock()">
             <i class="bi bi-trash-fill"></i>
