--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -33,6 +33,15 @@ body {
       height: 60px;
     }
   }
+  .wrap-path{
+    p{
+      text-wrap: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    #path{
+    }
+  }
 }
 
 .top-action-all{
@@ -134,6 +143,10 @@ body {
     background-color: #2b3947;
     color: white;
     border-radius: 10px;
+    @media (max-width: 1000px) {
+      grid-template-columns: 50px 1fr auto;
+      grid-template-rows: 1fr 1fr 1fr;
+    }
 
     p {
       margin: 0;
@@ -143,6 +156,9 @@ body {
       grid-column: 2 / 3;
       grid-row: 2 / 3;
       margin-left: .5rem;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
     .target-url{
       grid-column: 2 / 3;
@@ -152,6 +168,11 @@ body {
     .actions {
       grid-column: 3 / 4;
       grid-row: 1 / 3;
+      @media (max-width: 1000px) {
+        grid-column: 2 / 4;
+        grid-row: 3 / 4;
+        justify-content: flex-end;
+      }
       display: flex;
       justify-content: center;
       align-items: center;
@@ -163,6 +184,10 @@ body {
     .method {
       grid-column: 1 / 2;
       grid-row: 1 / 3;
+      @media (max-width: 1000px) {
+        grid-column: 1 / 2;
+        grid-row: 1 / 4;
+      }
       border-radius: 5px;
       background-color: #ea2929;
       color: white;
