--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -11882,7 +11882,11 @@ body {
   width: 60px;
   height: 60px;
 }
-
+.top-bar .wrap-path p {
+  text-wrap: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .top-action-all {
   margin-bottom: 0.3rem;
 }
@@ -11971,6 +11975,12 @@ body {
   color: white;
   border-radius: 10px;
 }
+@media (max-width: 1000px) {
+  .row-mock > div {
+    grid-template-columns: 50px 1fr auto;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+}
 .row-mock > div p {
   margin: 0;
 }
@@ -11978,6 +11988,9 @@ body {
   grid-column: 2/3;
   grid-row: 2/3;
   margin-left: 0.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .row-mock > div .target-url {
   grid-column: 2/3;
@@ -11990,6 +12003,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media (max-width: 1000px) {
+  .row-mock > div .actions {
+    grid-column: 2/4;
+    grid-row: 3/4;
+    justify-content: flex-end;
+  }
 }
 .row-mock > div .actions .form-check-input:checked {
   background-color: #c30808;
@@ -12008,6 +12028,12 @@ body {
   justify-content: center;
   align-items: center;
   font-weight: 700;
+}
+@media (max-width: 1000px) {
+  .row-mock > div .method {
+    grid-column: 1/2;
+    grid-row: 1/4;
+  }
 }
 .row-mock > div .method-get {
   background-color: #0baa20;
