--- a/src/views/index.html
+++ b/src/views/index.html
@@ -31,9 +31,10 @@
         <!-- <input id="path" class="path" type="text" value="/Users/davidesalvato/Downloads/mockbird"> -->
         <span class="led"></span>
         <input id="port" class="port" type="text" value="">
-        <i id="stop" class="stop bi bi-stop-fill d-none" onclick="stopServer()"></i>
-        <i id="play" class="play bi bi-play-fill" onclick="startServer()"></i>
+        <i id="stop" class="ml-5 stop bi bi-stop-fill d-none" onclick="stopServer()"></i>
+        <i id="play" class="ml-5 play bi bi-play-fill" onclick="startServer()"></i>
         <p id="config"></p>
+        <i id="copy" class="copy bi bi-clipboard" onclick="copyPrefixUrl()"></i>
       </div>
       <div class="col-lg-12 col-xl-4 d-flex my-sm-2 justify-content-xl-end align-items-center">
         <div>
