--- a/src/views/index.html
+++ b/src/views/index.html
@@ -57,6 +57,17 @@
     <div class="row row-mock">
     </div>
   </div>
+  <div class="row logs-section">
+    <div class="logs-section-buttons">
+      <div id="logs-open">
+        <i class="bi bi-terminal" onclick="readLogs()"></i>
+      </div>
+      <div id="logs-close" class="d-none">
+        <i class="bi bi-x" onclick="hideLogs()"></i>
+      </div>
+    </div>
+    <div class="logs-section-container d-none"></div>
+  </div>
   <!-- <script type="text/template" id="row-mock-element" src="../assets/template/row-mock.html"></script> -->
 </body>
 </html>
