--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -11867,6 +11867,7 @@ textarea.form-control-lg {
 body {
   background-color: #262d34;
   color: white;
+  padding-bottom: 30px;
 }
 
 .top-bar > div {
@@ -12200,6 +12201,43 @@ body {
 .path-history .path p {
   padding: 0.5rem;
   margin: 0;
+}
+
+.logs-section {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0 1rem;
+  background: #161e25;
+}
+.logs-section .logs-section-buttons {
+  border-bottom: 1px solid #3d4953;
+  display: flex;
+  justify-content: end;
+  font-size: 20px;
+}
+.logs-section .logs-section-buttons #logs-open {
+  display: flex;
+  justify-content: flex-end;
+}
+.logs-section .logs-section-buttons #logs-close {
+  display: flex;
+  justify-content: flex-end;
+}
+.logs-section-container {
+  height: 20vh;
+  overflow-y: scroll;
+  background-color: #161e25;
+  padding: 0.5rem;
+}
+.logs-section-container p.log-type-log {
+  color: #1bc349;
+  margin-bottom: 0.1rem;
+}
+.logs-section-container p.log-type-error {
+  color: #e0200f;
+  margin-bottom: 0.1rem;
 }
 
 /*# sourceMappingURL=main.css.map */
